--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,7 @@
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <title><%= htmlWebpackPlugin.options.title %></title>
     <link rel="stylesheet" href="./css/reset.css">
+    <link rel="stylesheet" href="https://at.alicdn.com/t/font_2032969_jm75rnxkse.css">
   </head>
   <body>
     <noscript>
